apps/2fauth/deployment.yaml
# Source: freshrss/templates/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 2fauth
spec:
  replicas: 2
  selector:
    matchLabels:
      app: 2fauth
  template:
    metadata:
      labels:
        app: 2fauth
    spec:
      securityContext:
        fsGroup: 568
        fsGroupChangePolicy: OnRootMismatch
        supplementalGroups:
          - 568
      containers:
        - name: 2fauth
          image: 2fauth/2fauth:6.1.3
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            readOnlyRootFilesystem: false
            allowPrivilegeEscalation: false
            privileged: false
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              add: []
              drop:
                - ALL
          ports:
            - containerPort: 8000
              name: 2fauth-http
          livenessProbe:
            httpGet:
              port: 8000
              path: /up
              scheme: HTTP
            initialDelaySeconds: 12
            failureThreshold: 5
            successThreshold: 1
            timeoutSeconds: 5
            periodSeconds: 15
          readinessProbe:
            httpGet:
              port: 8000
              path: /up
              scheme: HTTP
            initialDelaySeconds: 10
            failureThreshold: 4
            successThreshold: 2
            timeoutSeconds: 5
            periodSeconds: 12
          startupProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 10
            failureThreshold: 60
            successThreshold: 1
            timeoutSeconds: 3
            periodSeconds: 5
          volumeMounts:
            - mountPath: /2fauth
              name: config
              readOnly: false
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: 2fauth-config
